--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .idea/
 __DISTRIBUTE__/wwawing_dist/
 __DISTRIBUTE__/wwawing_update/
-__DISTRIBUTE__/wwawing_dist.bat
-__DISTRIBUTE__/wwawing_update.bat
-closure
+__DISTRIBUTE__/wwawing_dist.zip
+__DISTRIBUTE__/wwawing_update.zip
+closure/compiler.jar
+closure/README.md
+closure/COPYING
 compile.bat
 wwaload.long.js
 wwaload.long.noworker.js
