--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,10 @@
 language: node_js
 
+node_js:
+  - "4.1"
+
+install: true
+
 branches:
   only:
     - master
@@ -22,4 +27,4 @@ script:
   - popd
   - '[ $GH_TOKEN ] && git subtree push --prefix=__DISTRIBUTE_/wwawing_dist https://$GH_TOKEN@github.com/WWAWing/WWAWing.git distribute-all >& /dev/null'
   - '[ $GH_TOKEN ] && git subtree push --prefix=__DISTRIBUTE_/wwawing_update https://$GH_TOKEN@github.com/WWAWing/WWAWing.git distribute-update >& /dev/null'
-    
+ 
