--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ script:
   - pushd __DISTRIBUTE__
   - make clean
   - popd
+  - git commit -m "temporal remove directories"
   - '[ $GH_TOKEN ] && git subtree add --prefix=__DISTRIBUTE__/wwawing_dist https://$GH_TOKEN@github.com/WWAWing/WWAWing.git distribute-all --squash'
   - '[ $GH_TOKEN ] && git subtree add --prefix=__DISTRIBUTE__/wwawing_update  https://$GH_TOKEN@github.com/WWAWing/WWAWing.git distribute-update --squash'
   - pushd __DISTRIBUTE__
