--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,6 @@ script:
   - pushd __DISTRIBUTE__
   - make all
   - popd
-  - '[ $GH_TOKEN ] && git subtree push --prefix=__DISTRIBUTE_/wwawing_dist https://$GH_TOKEN@github.com/WWAWing/WWAWing.git distribute-all >& /dev/null'
-  - '[ $GH_TOKEN ] && git subtree push --prefix=__DISTRIBUTE_/wwawing_update https://$GH_TOKEN@github.com/WWAWing/WWAWing.git distribute-update >& /dev/null'
+  - '[ $GH_TOKEN ] && git subtree push --prefix=__DISTRIBUTE_/wwawing_dist https://$GH_TOKEN@github.com/WWAWing/WWAWing.git distribute-all'
+  - '[ $GH_TOKEN ] && git subtree push --prefix=__DISTRIBUTE_/wwawing_update https://$GH_TOKEN@github.com/WWAWing/WWAWing.git distribute-update'
  
