--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,6 @@ script:
 - git add -A
 - popd
 - '[ $GH_TOKEN ] && git subtree push --prefix=__DISTRIBUTE__/wwawing_dist https://$GH_TOKEN@github.com/WWAWing/WWAWing.git
-  distribute-all >& /dev/null'
+  distribute-all'
 - '[ $GH_TOKEN ] && git subtree push --prefix=__DISTRIBUTE__/wwawing_update https://$GH_TOKEN@github.com/WWAWing/WWAWing.git
-  distribute-update >& /dev/null'
+  distribute-update'
