--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,7 @@ script:
 - make all
 - git add -A
 - popd
+- git status
 - '[ $GH_TOKEN ] && git subtree push --prefix=__DISTRIBUTE__/wwawing_dist https://$GH_TOKEN@github.com/WWAWing/WWAWing.git
   distribute-all >& /dev/null'
 - '[ $GH_TOKEN ] && git subtree push --prefix=__DISTRIBUTE__/wwawing_update https://$GH_TOKEN@github.com/WWAWing/WWAWing.git
