--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ script:
 - '[ $GH_TOKEN ] && git subtree add --prefix=__DISTRIBUTE__/wwawing_update  https://$GH_TOKEN@github.com/WWAWing/WWAWing.git
   distribute-update --squash >& /dev/null'
 - pushd __DISTRIBUTE__
-- make all
+- make wwawing_dist
+- make wwawing_update
 - git add -A
 - popd
 - git status
