--- a/__DISTRIBUTE__/Makefile
+++ b/__DISTRIBUTE__/Makefile
@@ -2,7 +2,7 @@
 all: wwawing_dist wwawing_update
 .PHONY: zip
 zip: wwawing_dist.zip wwawing_update.zip
-wwawing_dist: ../LICENSE ../debugger/installer.bat ../debugger/uninstaller.bat ../debugger/readme.txt ../debugger/WWA\ Debugger.exe ../wwamk310/WinWwamk.exe ../wwamk310/作成ツールについて.txt ../manual.html ../caves01.dat ../caves01.gif ../dist_html/caves01.html ../caves02.dat ../caves02.gif ../dist_html/caves02.html ../classictitle.gif ../cover.gif ../island02.dat ../island02.gif ../dist_html/island02.html ../making.gif ../mapcg.gif ../style.css ../wwa.css ../wwa.js ../wwaload.js ../dist_html/wwamap.html ../wwawing-disp.png ../wwamap.dat ../audio
+wwawing_dist: ../LICENSE ../debugger/installer.bat ../debugger/uninstaller.bat ../debugger/readme.txt ../debugger/WWA\ Debugger.exe ../wwamk310/WinWwamk.exe ../manual.html ../caves01.dat ../caves01.gif ../dist_html/caves01.html ../caves02.dat ../caves02.gif ../dist_html/caves02.html ../classictitle.gif ../cover.gif ../island02.dat ../island02.gif ../dist_html/island02.html ../making.gif ../mapcg.gif ../style.css ../wwa.css ../wwa.js ../wwaload.js ../dist_html/wwamap.html ../wwawing-disp.png ../wwamap.dat ../audio
 	mkdir wwawing_dist.tmp
 	cd wwawing_dist.tmp; \
 	cp ../../LICENSE .; \
@@ -13,9 +13,7 @@ wwawing_dist: ../LICENSE ../debugger/installer.bat ../debugger/uninstaller.bat .
 	cd ..; \
 	cp ../../debugger/readme.txt README_WWADebugger.txt; \
 	cp ../../debugger/'WWA Debugger.exe' .; \
-	cp ../../debugger/WWADebuggerは管理者権限で実行してください .; \
 	cp ../../wwamk310/WinWwamk.exe .; \
-	cp ../../wwamk310/作成ツールについて.txt .; \
 	cp ../../manual.html .; \
 	mkdir mapdata; \
 	cd mapdata; \
