--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .idea/
 *.tmp
 wwa.link.js
+__DISTRIBUTE__/wwawing_dist
+__DISTRIBUTE__/wwawing_update
 closure/compiler.jar
 closure/README.md
 closure/COPYING
