--- a/__DISTRIBUTE__/Makefile
+++ b/__DISTRIBUTE__/Makefile
@@ -2,7 +2,7 @@
 all: wwawing_dist wwawing_update
 .PHONY: zip
 zip: wwawing_dist.zip wwawing_update.zip
-wwawing_dist: ../LICENSE ../debugger/installer.bat ../debugger/uninstaller.bat ../debugger/readme.txt ../debugger/WWA\ Debugger.exe ../wwamk310/WinWwamk.exe ../manual.html ../caves01.dat ../caves01.gif ../dist_html/caves01.html ../caves02.dat ../caves02.gif ../dist_html/caves02.html ../classictitle.gif ../cover.gif ../island02.dat ../island02.gif ../dist_html/island02.html ../making.gif ../mapcg.gif ../style.css ../wwa.css ../wwa.js ../wwaload.js ../dist_html/wwamap.html ../wwawing-disp.png ../wwamap.dat ../audio
+wwawing_dist: ../LICENSE ../debugger/installer.bat ../debugger/uninstaller.bat ../debugger/readme.txt ../debugger/WWA\ Debugger.exe ../wwamk310/WinWwamk.exe ../manual.html ../caves01.dat ../caves01.gif ../dist_html/caves01.html ../caves02.dat ../caves02.gif ../dist_html/caves02.html ../classictitle.gif ../cover.gif ../island02.dat ../island02.gif ../dist_html/island02.html ../making.gif ../mapcg.gif ../style.css ../wwa.css ../wwa.js ../wwaload.js ../dist_html/wwamap.html ../dist_html/wwamap-classic.html ../wwawing-disp.png ../wwamap.dat ../audio
 	mkdir wwawing_dist.tmp
 	cd wwawing_dist.tmp; \
 	cp ../../LICENSE .; \
@@ -35,6 +35,7 @@ wwawing_dist: ../LICENSE ../debugger/installer.bat ../debugger/uninstaller.bat .
 	cp ../../../wwa.js .; \
 	cp ../../../wwaload.js .; \
 	cp ../../../dist_html/wwamap.html .; \
+	cp ../../../dist_html/wwamap-classic.html .; \
 	cp ../../../wwawing-disp.png .; \
 	cp ../../../wwamap.dat . ; \
 	mkdir backup; \
