--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,16 @@
 wwa.link.js
 __DISTRIBUTE__/wwawing_dist
 __DISTRIBUTE__/wwawing_update
-closure/compiler.jar
-closure/README.md
-closure/COPYING
 compile.bat
 wwaload.long.js
 wwaload.long.noworker.js
 .DS_Store
 .vs
+node_modules
+
+wwa.js
+wwa.long.js
+wwa.long.js.map
+wwa.long.js.tmp
+wwa-nolink.js
+wwa-nolink.js.map
