--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "concat": "^1.0.3",
     "rimraf": "^2.6.2",
+    "typescript": "^2.5.3",
     "uglify-js": "^3.1.3"
   }
 }
