--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build:tsc": "tsc --sourceMap ./src/wwa_main.ts -t ES5 --outDir .. --out wwa.long.js",
     "build:uglify": "uglifyjs -c -o wwa-nolink.js --source-map  --in-source-map ./wwa.long.js.map ./wwa.long.js",
     "build:cat": "concat -o wwa.js wwa_license_comment.js wwa-nolink.js cryptojs/aes.js",
-    "clean": "rimraf wwa.long.js wwa.long.js.map wwa-nolink.js wwa-nolink.js.map wwa.js"
+    "zip:test": "node ./util/make-zip",
+    "build:dist": "node ./util/make-wwawing-dist",
+    "clean": "rimraf __DISTRIBUTE__/wwawing-dist __DISTRIBUTE__/wwawing-update wwa.long.js wwa.long.js.map wwa-nolink.js wwa-nolink.js.map wwa.js"
   },
   "repository": {
     "type": "git",
@@ -27,8 +29,15 @@
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
   "devDependencies": {
     "concat": "^1.0.3",
+    "cpx": "^1.5.0",
+    "glob": "^7.1.2",
+    "jszip": "^3.1.4",
     "rimraf": "^2.6.2",
     "typescript": "^2.5.3",
     "uglify-js": "^3.1.3"
+  },
+  "dependencies": {
+    "@types/es6-promise": "0.0.33",
+    "es6-promise": "^4.1.1"
   }
 }
