--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "wwa.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build:tsc && npm run build:uglify && npm run build:cat",
+    "build": "npm run build:tsc && npm run build:uglify && npm run build:cat && npm run build:dist",
     "build:tsc": "tsc --sourceMap ./src/wwa_main.ts -t ES5 --outDir .. --out wwa.long.js",
     "build:uglify": "uglifyjs -c -o wwa-nolink.js --source-map  --in-source-map ./wwa.long.js.map ./wwa.long.js",
     "build:cat": "concat -o wwa.js wwa_license_comment.js wwa-nolink.js cryptojs/aes.js",
-    "zip:test": "node ./util/make-zip",
-    "build:dist": "node ./util/make-wwawing-dist",
-    "clean": "rimraf __DISTRIBUTE__/wwawing-dist __DISTRIBUTE__/wwawing-update wwa.long.js wwa.long.js.map wwa-nolink.js wwa-nolink.js.map wwa.js"
+    "build:dist": "node ./util/make-wwawing-dist && node ./util/make-zip",
+    "clean": "rimraf wwawing-dist wwawing-update wwawing-dist.zip wwawing-update.zip wwa.long.js wwa.long.js.map wwa-nolink.js wwa-nolink.js.map wwa.js"
   },
   "repository": {
     "type": "git",
