--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a HTML file generator for WWA Wing",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "jade -P src/template/wwa.jade -o output"
   },
   "repository": {
     "type": "git",
