--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "jade -P src/template/wwa.jade -o output"
+    "build": "pug -P src/template/wwa.jade -o output"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/WWAWing/html-generator#readme",
   "devDependencies": {
-    "jade": "^1.11.0"
+    "pug": "^2.0.3",
+    "pug-cli": "^1.0.0-alpha6"
   }
 }
