--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/WWAWing/html-generator#readme",
   "devDependencies": {
+    "@types/node": "^10.3.0",
+    "@types/pug": "^2.0.4",
     "pug": "^2.0.3",
-    "pug-cli": "^1.0.0-alpha6"
+    "pug-cli": "^1.0.0-alpha6",
+    "typescript": "^2.9.1"
   }
 }
