--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "homepage": "https://github.com/WWAWing/html-generator#readme",
   "devDependencies": {
+    "@types/lodash": "^4.14.109",
     "@types/node": "^10.3.0",
     "@types/pug": "^2.0.4",
+    "lodash": "^4.17.10",
     "pug": "^2.0.3",
     "pug-cli": "^1.0.0-alpha6",
     "typescript": "^2.9.1"
