--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "pug -P src/template/wwa.pug -o output"
+    "build": "tsc",
+    "start": "npm run build && node lib"
   },
   "repository": {
     "type": "git",
