--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "npm run build && node lib"
+    "start": "npm run build && shx mkdir -p output && node lib"
   },
   "repository": {
     "type": "git",
@@ -22,12 +22,19 @@
   },
   "homepage": "https://github.com/WWAWing/html-generator#readme",
   "devDependencies": {
+    "@types/config": "0.0.34",
+    "@types/jsonschema": "^1.1.1",
     "@types/lodash": "^4.14.109",
     "@types/node": "^10.3.0",
     "@types/pug": "^2.0.4",
+    "config": "^1.30.0",
+    "jsonschema": "^1.2.4",
     "lodash": "^4.17.10",
     "pug": "^2.0.3",
     "pug-cli": "^1.0.0-alpha6",
-    "typescript": "^2.9.1"
+    "shelljs": "^0.8.2",
+    "shx": "^0.3.0",
+    "typescript": "^2.9.1",
+    "yaml": "^0.3.0"
   }
 }
