--- a/config/default.yml
+++ b/config/default.yml
@@ -10,6 +10,7 @@ page:
 
   # WWA に関する設定です
   # 各項目無指定はデフォルトになります
+  # ただし、マップデータは必須です
   wwa:
     urlgateEnable: true
     
@@ -38,8 +39,9 @@ page:
   copyrights:
     # WWA本家の著作権情報をページに記述する場合はもろもろ指定します
     -
-      startYear: 1996
-      presentYear: 2016
+      range:
+        firstYear: 1996
+        lastYear: 2016
       credit: NAO
       product: 
         name: "World Wide Adventure"
@@ -48,8 +50,10 @@ page:
 
     # WWAWingの著作権情報をページに記述する場合はもろもろ指定します
     -
-      startYear: 2013
-      presentYear: 2018
+      range:
+        firstYear: 2013
+        # lastYear に present を指定すると今年の値が入力されます
+        lastYear: "present"
       credit: "WWA Wing Team"
       product: 
         name: "WWA Wing"
