--- a/config/default.yml
+++ b/config/default.yml
@@ -2,7 +2,7 @@ page:
 
   # タイトルです
   # 無指定はデフォルトのタイトルが指定されます
-#  title: "World Wide Adventure Wing"
+  title: "World Wide Adventure Wing"
 
   # 生成するHTMLがWWA開発用のモードかどうかを指定します
   # 無指定は false と同じ扱いになります
