--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   },
   "homepage": "https://github.com/WWAWing/html-generator#readme",
   "devDependencies": {
-    "@types/config": "0.0.34",
+    "@types/js-yaml": "^3.11.1",
     "@types/jsonschema": "^1.1.1",
     "@types/lodash": "^4.14.109",
     "@types/node": "^10.3.0",
     "@types/pug": "^2.0.4",
-    "config": "^1.30.0",
+    "js-yaml": "^3.12.0",
     "jsonschema": "^1.2.4",
     "lodash": "^4.17.10",
     "pug": "^2.0.3",
