refactor(index): 暫定CLI/API

--- a/config/default.yml
+++ b/config/default.yml
@@ -1,4 +1,7 @@
 page:
+  # テンプレートファイルの場所を指定します
+  # プログラムを実行しているディレクトリが基準の相対パスです
+  template: "../template/wwa.pug"
 
   # タイトルです
   # 無指定はデフォルトのタイトルが指定されます
