chore(debug): cliをデバッグディレクトリに切り離し

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "npm run build && shx mkdir -p output && node lib"
+    "start": "npm run build && shx mkdir -p output && node debug/debug.js"
   },
   "repository": {
     "type": "git",
