--- a/package.json
+++ b/package.json
@@ -28,14 +28,15 @@
     "@types/lodash": "^4.14.109",
     "@types/node": "^10.3.0",
     "@types/pug": "^2.0.4",
-    "js-yaml": "^3.12.0",
-    "jsonschema": "^1.2.4",
-    "lodash": "^4.17.10",
-    "pug": "^2.0.3",
     "pug-cli": "^1.0.0-alpha6",
     "shelljs": "^0.8.2",
     "shx": "^0.3.0",
-    "typescript": "^2.9.1",
-    "yaml": "^0.3.0"
+    "typescript": "^2.9.1"
+  },
+  "dependencies": {
+    "pug": "^2.0.3",
+    "lodash": "^4.17.10",
+    "jsonschema": "^1.2.4",
+    "js-yaml": "^3.12.0"
   }
 }
