--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "scripts": {
     "clean": "shx rm -rf debug",
-    "deploy": "shx mkdir -p debug && shx cp -R assets debug && shx cp assets/html/dev/*.html debug/assets && shx cp engine/lib/wwa.long.js debug/assets",
+    "deploy": "shx mkdir -p debug && npm-run-all deploy:*",
+    "deploy:audio": "shx cp -R assets/audio debug/",
+    "deploy:html": "shx cp assets/html/dev/*.* debug/",
+    "deploy:images": "shx cp assets/images/*.* debug/",
+    "deploy:mapdata": "shx cp assets/mapdata/*.* debug/",
+    "deploy:scripts": "shx cp engine/lib/wwa.long.js debug/ && shx cp assets/scripts/*.* debug/",
+    "deploy:style": "shx cp assets/style/*.* debug/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +27,7 @@
   },
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
   "devDependencies": {
+    "npm-run-all": "^4.1.3",
     "shelljs": "^0.8.2",
     "shx": "^0.3.1"
   }
