--- a/package.json
+++ b/package.json
@@ -3,14 +3,6 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "clean": "shx rm -rf debug",
-    "deploy": "shx mkdir -p debug && npm-run-all deploy:*",
-    "deploy:audio": "shx cp -R assets/audio debug/",
-    "deploy:html": "shx cp assets/html/dev/*.* debug/",
-    "deploy:images": "shx cp assets/images/*.* debug/",
-    "deploy:mapdata": "shx cp assets/mapdata/*.* debug/",
-    "deploy:scripts": "shx cp engine/lib/wwa.long.js debug/ && shx cp assets/scripts/*.* debug/",
-    "deploy:style": "shx cp assets/style/*.* debug/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,10 +17,5 @@
   "bugs": {
     "url": "https://github.com/WWAWing/WWAWing/issues"
   },
-  "homepage": "https://github.com/WWAWing/WWAWing#readme",
-  "devDependencies": {
-    "npm-run-all": "^4.1.3",
-    "shelljs": "^0.8.2",
-    "shx": "^0.3.1"
-  }
+  "homepage": "https://github.com/WWAWing/WWAWing#readme"
 }
