--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -7,8 +7,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "WWA Wing Team",
-  "license": "CC-BY-4.0",
-  "devDependencies": {
-    "@wwawing/engine": "3.1.6"
-  }
+  "license": "CC-BY-4.0"
 }
