--- a/packages/build-utils/package.json
+++ b/packages/build-utils/package.json
@@ -1,33 +1,13 @@
 {
-  "name": "@wwawing/build-utils",
-  "version": "0.0.0",
-  "description": "build utilies for WWA Wing",
-  "main": "lib/make-wwapage.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "scripts": {
-    "start": "npm run build:script && node ./lib/make-wwapage all && npm run build:dist",
-    "start:dev": "npm run build:script && node ./lib/make-wwapage dev",
-    "start:dist": "npm run build:script && node ./lib/make-wwapage dist && npm run buiild:dist",
-    "build:script": "tsc -p .",
-    "build:dist": "npm run clean:dist && node ./lib/make-wwawing-dist && node ./lib/make-zip",
-    "clean": "npm run clean:script && npm run clean:dist",
-    "clean:script": "shx rm -rf lib",
-    "clean:dist": "shx rm -rf output",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "WWA Wing Team",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/jszip": "^3.1.4",
-    "@types/node": "^10.5.1",
-    "@types/shelljs": "^0.8.0",
-    "@wwawing/html-generator": "git+https://git@github.com/WWAWing/html-generator.git#include-lib",
-    "glob": "^7.1.2",
-    "jszip": "^3.1.5",
-    "shelljs": "^0.8.2",
-    "shx": "^0.3.1",
-    "typescript": "^2.9.2"
-  }
+	"dependencies": {
+		"@types/jszip": "^3.1.4",
+		"@types/node": "^10.5.1",
+		"@types/shelljs": "^0.8.0",
+		"@wwawing/html-generator": "git+https://git@github.com/WWAWing/html-generator.git#include-lib",
+		"glob": "^7.1.2",
+		"jszip": "^3.1.5",
+		"shelljs": "^0.8.2",
+		"shx": "^0.3.1",
+		"typescript": "^2.9.2"
+	}
 }
