--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -9,23 +9,17 @@
     "build:scripts": "tsc -p .",
     "build:exe": "shx mkdir -p bin && nexe --target=win32-x86-8.6.0 --output bin/wwa-server.exe",
     "start": "npm run build && npm run deploy && node lib debug",
-    "clean": "shx rm -rf debug lib bin",
-    "deploy": "shx mkdir -p debug && npm-run-all deploy:*",
-    "deploy:audio": "shx cp -R ../assets/audio debug/",
-    "deploy:html": "shx cp ../assets/html/dev/*.* debug/",
-    "deploy:images": "shx cp ../assets/images/*.* debug/",
-    "deploy:mapdata": "shx cp ../assets/mapdata/*.* debug/",
-    "deploy:scripts": "shx cp ../engine/lib/wwa.long.js debug/ && shx cp ../assets/scripts/*.* debug/",
-    "deploy:style": "shx cp ../assets/style/*.* debug/"
+    "clean": "shx rm -rf debug lib bin"
   },
   "author": "WWA Wing Team",
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.16.0",
     "express": "^4.16.3",
-    "typescript": "^2.9.2",
+    "nexe": "^2.0.0-rc.31",
     "npm-run-all": "^4.1.3",
     "shelljs": "^0.8.2",
-    "shx": "^0.3.1"
+    "shx": "^0.3.1",
+    "typescript": "^2.9.2"
   }
 }
