--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -5,11 +5,18 @@
   "main": "wwa.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build:webpack && npm run build:cat",
+    "start": "npm-run-all build deploy && node ./launch-server debug",
+    "build": "npm-run-all build:*",
     "build:webpack": "webpack --config webpack.config.js && webpack --config webpack.config.prod.js",
-    "build:cat": "shx cat ../assets/scripts/wwa_license_comment.js ./lib/wwa-nolink.js ../assets/scripts/aes.js > ./lib/wwa.js",
-    "clean": "npm run clean:dist && npm run clean:js",
-    "clean:js": "shx rm -rf lib"
+    "build:cat": "shx cat ./node_modules/@wwawing/assets/scripts/wwa_license_comment.js ./lib/wwa-nolink.js ./node_modules/@wwawing/assets/scripts/aes.js > ./lib/wwa.js",
+    "deploy": "shx mkdir -p debug && npm-run-all deploy:*",
+    "deploy:audio": "shx cp -R ./node_modules/@wwawing/assets/audio debug/",
+    "deploy:html": "shx cp ./node_modules/@wwawing/assets/html/dev/*.* debug/",
+    "deploy:images": "shx cp ./node_modules/@wwawing/assets/images/*.* debug/",
+    "deploy:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* debug/",
+    "deploy:scripts": "shx cp ./lib/wwa.long.js debug/ && shx cp ../assets/scripts/*.* debug/",
+    "deploy:style": "shx cp ./node_modules/@wwawing/assets/style/*.* debug/",
+    "clean": "shx rm -rf lib debug"
   },
   "repository": {
     "type": "git",
@@ -33,6 +40,9 @@
     "uglify-js": "^3.3.27",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.9.1",
-    "webpack-cli": "^2.1.4"
+    "webpack-cli": "^2.1.4",
+    "npm-run-all": "^4.1.3",
+    "@wwawing/assets": "0.0.0",
+    "@wwawing/debug-server": "0.0.0"
   }
 }
