--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -14,7 +14,7 @@
     "deploy:html": "shx cp ./node_modules/@wwawing/assets/html/dev/*.* debug/",
     "deploy:images": "shx cp ./node_modules/@wwawing/assets/images/*.* debug/",
     "deploy:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* debug/",
-    "deploy:scripts": "shx cp ./lib/wwa.long.js debug/ && shx cp ../assets/scripts/*.* debug/",
+    "deploy:scripts": "shx cp ./lib/wwa.long.js debug/ && shx cp ../assets/scripts/*.* debug/ && shx cp ./node_modules/@wwawing/loader/lib/wwaload*.js debug/",
     "deploy:style": "shx cp ./node_modules/@wwawing/assets/style/*.* debug/",
     "clean": "shx rm -rf lib debug"
   },
@@ -42,6 +42,7 @@
     "webpack": "^4.9.1",
     "webpack-cli": "^2.1.4",
     "npm-run-all": "^4.1.3",
+    "@wwawing/loader": "0.0.4",
     "@wwawing/assets": "0.0.0",
     "@wwawing/debug-server": "0.0.0"
   }
