--- a/packages/build-utils/package.json
+++ b/packages/build-utils/package.json
@@ -7,11 +7,11 @@
 		"lib": "lib"
 	},
 	"scripts": {
-		"start": "npm run clean && npm run build:script && node ./lib/make-wwapage all && npm run build:dist",
-		"start:dev": "npm run build:script && node ./lib/make-wwapage dev",
-		"start:dist": "npm run build:script && node ./lib/make-wwapage dist && npm run buiild:dist",
-		"build:script": "tsc -p .",
-		"build:dist": "npm run clean:dist && node ./lib/make-wwawing-dist && node ./lib/make-zip",
+		"start": "npm run clean && npm run build && node ./lib/make-wwapage all && npm run make-dist",
+		"start:dev": "npm run build && node ./lib/make-wwapage dev",
+		"start:dist": "npm run build && node ./lib/make-wwapage dist && npm run buiild:dist",
+		"build": "npm run clean:script && tsc -p .",
+		"make-dist": "npm run clean:dist && node ./lib/make-wwawing-dist && node ./lib/make-zip",
 		"clean": "npm run clean:script && npm run clean:dist",
 		"clean:script": "shx rm -rf lib",
 		"clean:dist": "shx rm -rf output",
