--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm-run-all build deploy && node ./launch-server debug",
+    "version_up:patch": "npm version patch && npm run build",
+    "version_up:minor": "npm version minor && npm run build",
+    "version_up:major": "npm version major && npm run build",
     "build": "npm-run-all clean build:*",
     "build:webpack": "webpack --config webpack.config.js && webpack --config webpack.config.prod.js",
     "build:cat": "shx cat ./node_modules/@wwawing/assets/scripts/wwa_license_comment.js ./lib/wwa-nolink.js ./node_modules/@wwawing/assets/scripts/aes.js > ./lib/wwa.js",
