--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   },
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
   "lerna": "^2.11.0",
-  "npm-run-all": "^4.1.3"
+  "npm-run-all": "^4.1.3",
+  "devDependencies": {
+    "lerna": "^2.11.0",
+    "npm-run-all": "^4.1.3"
+  }
 }
