--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ env:
 script:
 - npm config set -g production false
 - npm install && npm run bootstrap && npm run build && npm run make-dist
-- git clone https://github.com/WWAWing/Releases.git"
+- git clone https://github.com/WWAWing/Releases.git
 - cp ./packages/build-utils/output/*.zip Releases
 - WWA_VERSION=$(./getEngineVersion.sh)
 - pushd Releases
