chore(engine): webpack watch

--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -5,21 +5,23 @@
   "main": "wwa.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm-run-all build deploy && node ./launch-server debug",
+    "start": "run-p build:webpack:dev deploy server",
     "version_up:patch": "npm version patch && npm run build",
     "version_up:minor": "npm version minor && npm run build",
     "version_up:major": "npm version major && npm run build",
     "build": "npm-run-all clean build:*",
     "build:webpack": "webpack --config webpack.config.js && webpack --config webpack.config.prod.js",
+    "build:webpack:dev": "webpack -w",
     "build:cat": "shx cat ./node_modules/@wwawing/assets/scripts/wwa_license_comment.js ./lib/wwa-nolink.js ./node_modules/@wwawing/assets/scripts/aes.js > ./lib/wwa.js",
-    "deploy": "shx mkdir -p debug && npm-run-all deploy:*",
-    "deploy:audio": "shx cp -R ./node_modules/@wwawing/assets/audio debug/",
-    "deploy:html": "shx cp ./node_modules/@wwawing/assets/html/dev/*.* debug/",
-    "deploy:images": "shx cp ./node_modules/@wwawing/assets/images/*.* debug/",
-    "deploy:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* debug/",
-    "deploy:scripts": "shx cp ./lib/wwa.long.js debug/ && shx cp ../assets/scripts/*.* debug/ && shx cp ./node_modules/@wwawing/loader/lib/wwaload*.js debug/",
-    "deploy:style": "shx cp ./node_modules/@wwawing/assets/style/*.* debug/",
-    "clean": "shx rm -rf lib debug"
+    "deploy": "shx mkdir -p lib && npm-run-all deploy:*",
+    "deploy:audio": "shx cp -R ./node_modules/@wwawing/assets/audio lib/",
+    "deploy:html": "shx cp ./node_modules/@wwawing/assets/html/dev/*.* lib/",
+    "deploy:images": "shx cp ./node_modules/@wwawing/assets/images/*.* lib/",
+    "deploy:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* lib/",
+    "deploy:scripts": "shx cp ../assets/scripts/*.* lib/ && shx cp ./node_modules/@wwawing/loader/lib/wwaload*.js lib/",
+    "deploy:style": "shx cp ./node_modules/@wwawing/assets/style/*.* lib/",
+    "clean": "shx rm -rf lib",
+    "server": "node ./launch-server lib"
   },
   "repository": {
     "type": "git",
