--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -4,19 +4,20 @@
   "description": "a World Wide Adventure mapdata loader for client-side web applications",
   "main": "./lib/wwaload.js",
   "scripts": {
-    "start": "npm run clean:debug && npm run build && npm run start:deploy && http-server ./debug -o",
-    "start:deploy": "shx mkdir -p debug && shx cp -R lib/*.js debug && shx cp -R resources/* debug",
+    "start": "run-p watch:* start:deploy server",
+    "start:deploy": "shx mkdir -p lib && shx cp -R resources/* lib",
     "test": "echo \"no test specified\"",
-    "build": "npm run clean:lib && npm run build:worker && npm run build:noworker",
+    "watch:worker": "webpack -w ",
+    "watch:noworker": "webpack -w --config ./webpack.config.noworker.js",
+    "server": "http-server ./lib -o",
+    "build": "npm run clean && npm run build:worker && npm run build:noworker",
     "build:worker": "npm run build:worker:dev && npm run build:worker:prod",
     "build:worker:dev": "webpack",
     "build:worker:prod": "webpack --config ./webpack.config.prod.js",
     "build:noworker": "npm run build:noworker:dev && npm run build:noworker:prod",
     "build:noworker:dev": "webpack --config ./webpack.config.noworker.js",
     "build:noworker:prod": "webpack --config ./webpack.config.prod.noworker.js",
-    "clean": "npm run clean:debug && npm run clean:lib",
-    "clean:lib": "shx rm -rf lib",
-    "clean:debug": "shx rm -rf debug"
+    "clean": "shx rm -rf lib"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
   "homepage": "https://github.com/WWAWing/WWALoader#readme",
   "devDependencies": {
     "http-server": "^0.10.0",
+    "npm-run-all": "^4.1.3",
     "shelljs": "^0.8.1",
     "shx": "^0.2.2",
     "ts-loader": "^4.2.0",
