--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,13 @@ script:
 - git add -A
 - git commit -m "RELEASED $WWA_VERSION"
 - git push origin master
+- popd
+- openssl aes-256-cbc -K $encrypted_260a91b79056_key -iv $encrypted_260a91b79056_iv -in id_wwawing_com_deploy.enc -out ~/.ssh/id_rsa -d
+- chmod 0600 ~/.ssh/id_rsa
+- git clone git@github.com:WWAWing/wwawing.com.git
+- pushd wwawing.com
+- echo "{\"version\":\"$WWA_VERSION\"}" > ./latest-version.json
+- git add -A
+- git commit -m "RELEASED $WWA_VERSION"
+- git push origin master
+- popd
