--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 - chmod 0600 ~/.ssh/id_rsa
 - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 - npm config set -g production false
-- npm install && npm run bootstrap && npm run build && npm run make-dist
+- npm install && npm run bootstrap && npm run build && npm run generate && npm run make-dist
 - git clone git@github.com:WWAWing/Releases.git
 - cp ./packages/build-utils/output/*.zip Releases
 - WWA_VERSION=$(./getEngineVersion.sh)
