--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "lerna clean",
     "start": "lerna run start --stream --scope @wwawing/engine",
     "build": "lerna run build --stream --parallel",
+    "generate": "lerna exec --scope @wwawing/debug-server -- npm run generate",
     "make-dist": "npm run build && lerna run make-dist --stream"
   },
   "repository": {
