--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -5,9 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "npm run build && node lib debug",
-    "build": "npm-run-all build:*",
-    "build:scripts": "tsc -p .",
-    "build:exe": "shx mkdir -p bin && nexe --target=win32-x86-8.6.0 --output bin/wwa-server.exe",
+    "build": "tsc -p .",
+    "generate": "mkdir -p bin && nexe --target=win32-x86-8.6.0 --cwd . --output bin/wwa-server.exe",
     "clean": "shx rm -rf debug lib bin",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,7 +16,6 @@
     "@types/express": "^4.16.0",
     "express": "^4.16.3",
     "nexe": "^2.0.0-rc.31",
-    "npm-run-all": "^4.1.3",
     "shelljs": "^0.8.2",
     "shx": "^0.3.1",
     "typescript": "^2.9.2"
