--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "WWA Wing Team",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node-sass": "^3.10.32",
+    "node-sass": "^4.10.0"
+  }
 }
