--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -4,12 +4,20 @@
   "description": "WWA Wing stylesheet files",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm run clean:script && tsc",
+    "start": "npm run build && npm run make-css",
+    "clean": "npm run clean:script && npm run clean:dist",
+    "clean:script": "shx rm -rf lib && shx mkdir -p lib",
+    "clean:dist": "shx rm -rf output && shx mkdir -p output",
+    "make-css": "npm run clean:dist && node ./lib/make-css"
   },
   "author": "WWA Wing Team",
   "license": "MIT",
   "devDependencies": {
     "@types/node-sass": "^3.10.32",
-    "node-sass": "^4.10.0"
+    "node-sass": "^4.10.0",
+    "shx": "^0.3.2",
+    "typescript": "^3.1.6"
   }
 }
