--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -19,7 +19,7 @@
     "deploy:images": "shx cp ./node_modules/@wwawing/assets/images/*.* lib/",
     "deploy:mapdata": "shx cp ./node_modules/@wwawing/assets/mapdata/*.* lib/",
     "deploy:scripts": "shx cp ../assets/scripts/*.* lib/ && shx cp ./node_modules/@wwawing/loader/lib/wwaload*.js lib/",
-    "deploy:style": "shx cp ./node_modules/@wwawing/assets/style/*.* lib/",
+    "deploy:style": "shx cp ./node_modules/@wwawing/styles/output/*.* lib/",
     "clean": "shx rm -rf lib",
     "server": "node ./launch-server lib"
   },
@@ -49,6 +49,7 @@
     "npm-run-all": "^4.1.3",
     "@wwawing/loader": "0.0.0",
     "@wwawing/assets": "0.0.0",
+    "@wwawing/styles": "0.0.0",
     "@wwawing/debug-server": "0.0.0"
   }
 }
