--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -42,7 +42,6 @@
     "@wwawing/debug-server": "0.0.0",
     "@wwawing/loader": "0.0.0",
     "crypto-js": "^3.1.9-1",
-    "npm-run-all": "^4.1.3",
     "shelljs": "^0.8.2",
     "shx": "^0.3.1",
     "ts-loader": "^4.3.0",
@@ -51,9 +50,6 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
-    "npm-run-all": "^4.1.3",
-    "@wwawing/loader": "0.0.0",
-    "@wwawing/assets": "0.0.0",
-    "@wwawing/debug-server": "0.0.0"
+    "npm-run-all": "^4.1.3"
   }
 }
