package.jsonにstartタスクを追加
トップでnpm run startを実行してもCSSが無いとエラーが出ないための調整

--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "run-p build",
     "build": "npm-run-all clean build:*",
     "build:script": "npm run clean:script && tsc",
     "build:sass": "npm run clean:dist && node ./lib/make-css",
