--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.16.0",
+    "@types/node": "^11.9.4",
     "express": "^4.16.4",
     "nexe": "^2.0.0-rc.34",
     "shelljs": "^0.8.2",
