--- a/packages/styles/tsconfig.json
+++ b/packages/styles/tsconfig.json
@@ -9,7 +9,8 @@
             "es2017",
             "es2016",
             "es2015",
-            "es5"
+            "es5",
+            "dom"
         ],
         "strict": true,
         "noLib": false,
