--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -15,9 +15,9 @@
   "devDependencies": {
     "@types/express": "^4.16.0",
     "express": "^4.16.4",
-    "nexe": "^2.0.0-rc.34",
+    "nexe": "^3.0.0-beta.15",
     "shelljs": "^0.8.2",
     "shx": "^0.3.2",
-    "typescript": "^2.9.2"
+    "typescript": "^3.3.3333"
   }
 }
