--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run clean && npm run build:script && npm run build:sass",
-    "build:script": "npm run clean:script && tsc",
-    "build:sass": "npm run clean:dist && node ./lib/make-css",
+    "build": "npm run clean:script && tsc",
+    "compile": "npm run clean:dist && node ./lib/make-css",
     "clean": "npm run clean:script && npm run clean:dist",
     "clean:script": "shx rm -rf lib && shx mkdir -p lib",
     "clean:dist": "shx rm -rf output && shx mkdir -p output"
@@ -18,6 +17,6 @@
     "@types/node-sass": "^3.10.32",
     "node-sass": "^4.10.0",
     "shx": "^0.3.2",
-    "typescript": "^3.1.6"
+    "typescript": "^3.3.3333"
   }
 }
