--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/WWAWing/WWALoader#readme",
   "devDependencies": {
+    "@wwawing/common-interface": "0.0.0",
     "http-server": "^0.10.0",
     "npm-run-all": "^4.1.3",
     "shelljs": "^0.8.2",
