設定ファイルの説明を @matsuyuki_a のものと合体

--- a/packages/assets/wwamk318/WinWwamk.ini
+++ b/packages/assets/wwamk318/WinWwamk.ini
@@ -1,6 +1,11 @@
+; == 設定 ==
+; 設定ファイル(WinWwamk.ini)は、以下の設定を変更することができます。
+; 実行ファイルと同じ位置にWinWwamk.iniを配置すると、変更が反映されます。
+; https://github.com/WWAWing/WinWwaWingmk/wiki/Settings
+
 [Main]
 ; 作成ツールのウインドウの左上の位置のX座標とY座標です。ここでは両方とも 0 です。
 ; タスクバーと作成ツールが重なる場合は、この値を調整してご利用ください。
-; 以下の2行を消去すると、作成ツールはだいたい中央の位置に表示されます。
-PositionX=0
-PositionY=0
+; 以下の2行を消去すると、作成ツールはだいたい中央の位置に表示されます
+PositionX = 0 ; ウインドウの表示位置のX座標
+PositionY = 0 ; ウインドウの表示位置のY座標
