inputからの方向転換入力を追加
GamePad...Bボタン系＆方向入力
Keybord...Bボタン系＆方向入力
Touch...1つ目の指を画面外にタッチしながら、2つ目の指でタッチした場合

--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -14,7 +14,7 @@
   "author": "WWA Wing Team",
   "license": "MIT",
   "devDependencies": {
-    "@types/express": "^4.16.0",
+    "@types/express": "4.16.0",
     "@types/node": "^12.12.6",
     "express": "^4.16.4",
     "nexe": "^3.3.2",
