--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wwawing/engine",
-  "version": "3.2.0",
+  "version": "0.0.0-test.1",
   "description": "World Wide Adventure: an RPG Engine.",
   "main": "wwa.js",
   "scripts": {
@@ -38,10 +38,10 @@
   "homepage": "https://github.com/WWAWing/WWAWing#readme",
   "devDependencies": {
     "@types/crypto-js": "^3.1.43",
-    "@wwawing/assets": "0.0.0",
-    "@wwawing/common-interface": "0.0.0",
-    "@wwawing/debug-server": "0.0.0",
-    "@wwawing/loader": "0.0.0",
+    "@wwawing/assets": "^0.0.0-test.1",
+    "@wwawing/common-interface": "^0.0.0-test.1",
+    "@wwawing/debug-server": "^0.0.0-test.1",
+    "@wwawing/loader": "^0.0.0-test.1",
     "crypto-js": "^3.1.9-1",
     "npm-run-all": "^4.1.5",
     "shelljs": "^0.8.2",
