--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "WWA Wing Team",
-  "license": "CC-BY-4.0"
+  "license": "CC-BY-4.0",
+  "publishConfig": {
+    "access": "public"
+  }
 }
