--- a/packages/common-interface/package.json
+++ b/packages/common-interface/package.json
@@ -11,5 +11,8 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^3.3.3333"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
