chore(rip): build-utils削除・publishConfig=public

--- a/packages/debug-server/package.json
+++ b/packages/debug-server/package.json
@@ -19,5 +19,8 @@
     "shelljs": "^0.8.2",
     "shx": "^0.3.2",
     "typescript": "^3.3.3333"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
