--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -41,5 +41,8 @@
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
